# philips_sicp_py_ha

./: README.md  TODO.md  hacs.json  main.py  pyproject.toml  release.sh
.github/workflows/: release.yml  validate.yml
custom_components/philips_sicp_display/: README.md  __init__.py  config_flow.py  coordinator.py  light.py  manifest.json  number.py  wol.py
custom_components/sicp_homeassistant/: config_flow.py  const.py  coordinator.py  entity.py  light.py  manifest.json  number.py  pyproject.toml  select.py  sensor.py  switch.py
custom_components/sicp_homeassistant/translations/: en.json
lib/sicppy/: README.md  pyproject.toml
lib/sicppy/sicppy/: __init__.py  cli.py  easycli.py  errors.py  ip_monitor.py  main.py  messages.py  protocol.py  response.py
src/sicp_homeassistant/: README.md  config_flow.py  manifest.json  number.py  select.py  sensor.py
src/sicppy/: pyproject.toml
src/sicppy/sicppy/: cli.py  easycli.py  ip_monitor.py  messages.py  protocol.py  response.py
