[project]
name = "philipssignageha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sicppy",
]

[tool.uv.workspace]
members = [
    "lib/sicppy",
    "custom_components/sicp_homeassistant",
]

[tool.uv.sources]
sicppy = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
