[project]
name = "philipssignageha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sicppy",
]

[tool.uv.workspace]
members = [
    "lib/sicppy",
    "custom_components/sicp_homeassistant",
]

[tool.uv.sources]
sicppy = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.setuptools]
packages = ["sicppy", "sicp_homeassistant"]
include-package-data = true

[tool.setuptools.package-dir]
sicppy = "lib/sicppy/sicppy"
sicp_homeassistant = "custom_components/sicp_homeassistant"

[tool.pyright]
extraPaths = [
    "lib/sicppy",
    "custom_components",
]