[project]
name = "sicp-homeassistant"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sicppy",
]

[tool.uv.sources]
sicppy = { workspace = true }

[tool.uv.dependencies.dev]
dev = [
    "homeassistant>=2026.1.1",
    "voluptuous>=0.15.2",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sicp_homeassistant"]
include-package-data = true

[tool.setuptools.package-dir]
sicp_homeassistant = "."

[tool.setuptools.package-data]
sicp_homeassistant = [
  "manifest.json",
  "strings.json",
  "translations/**/*.json",
]