[project]
name = "sicppy"
version = "0.2.0"
description = "Philips Signage Control Protocol (SICP) implementation in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sicppy"]
