[project]
name = "sicppy"
version = "0.3.1"
description = "Philips Signage Control Protocol (SICP) implementation in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sicppy"]
